# SPDX-License-Identifier: PMPL-1.0-or-later
[package]
name = "chapeliser"
version = "0.1.0"
edition = "2024"
authors = ["Jonathan D.A. Jewell <j.d.a.jewell@open.ac.uk>"]
description = "General-purpose Chapel acceleration framework — distribute any workload without learning Chapel"
license = "PMPL-1.0-or-later"
repository = "https://github.com/hyperpolymath/chapeliser"
keywords = ["chapel", "distributed", "hpc", "parallel", "acceleration"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
anyhow = "1"
thiserror = "2"
handlebars = "6"
walkdir = "2"
blake3 = "1"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
